topbar fixed, collapsing image fixed, classes renamed

--- a/style_unprefixed.css
+++ b/style_unprefixed.css
@@ -1,5 +1,4 @@
 
-
 body {
   margin: auto;
   padding: 0;
@@ -20,25 +19,24 @@ body {
   overflow: hidden;
 }
 
-
+/* .ru {
+  letter-spacing: 0.07em;
+} */
 
 .link:active,
 .button:active {
   opacity: 0.5;
 }
 
-.header {
-  display: -ms-grid;
+.page-navigation {
   display: grid;
-  -ms-grid-columns: 165px auto minmax(0, 205px);
-  grid-template-columns: 165px 1.16fr minmax(0, 530px) 1fr minmax(0, 205px);
+  grid-template-columns: 165px auto minmax(0, 205px);
   padding: 40px 60px 0 42px;
   text-align: center;
 }
 
 .link-logo {
-  -ms-grid-column-align: left;
-      justify-self: left;
+  justify-self: left;
   margin-top: -16px;
 }
 
@@ -47,52 +45,20 @@ body {
   height: 51px;
 }
 
-.navigation {
+.models-list {
   display: grid;
-  grid-template-columns: repeat(5,auto);
-  grid-column: 3 / 4;
+  grid-template-columns: auto repeat(5, min-content) auto;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
 .user-navigation {
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 1;
-  grid-column: 5 / 6;
-  display: -ms-grid;
+  grid-column: 3 / 4;
   display: grid;
-  -ms-grid-columns: -webkit-min-content 30px -webkit-min-content 30px -webkit-min-content;
-  -ms-grid-columns: min-content 30px min-content 30px min-content;
-  grid-template-columns: repeat(3, -webkit-min-content);
   grid-template-columns: repeat(3, min-content);
   grid-column-gap: 30px;
-  -ms-grid-column-align: right;
   justify-self: right;
-}
-
-.navigation__link {
-  font-size: 15px;
-  font-weight: 600;
-  color: #000;
-  background-color: #fff;
-  text-decoration: none;
-}
-
-.navigation__link:focus,
-.navigation__link:hover {
-  color: #c51937;
-}
-
-.navigation__link_current {
-  position: relative;
-  color: #e51937;
-}
-
-.navigation__link_current:before {
-  position: absolute;
-  top: 26px;
-  content: "";
-  width: 60px;
-  border-bottom: 2px solid #e51937;
-  border-radius: 50%;
 }
 
 .menu-burger {
@@ -121,11 +87,63 @@ body {
   top: 14px;
 }
 
+.page-navigation__link {
+  font-size: 15px;
+  font-weight: 600;
+  color: #000;
+  background-color: #fff;
+  text-decoration: none;
+}
+
+.page-navigation__link:focus,
+.page-navigation__link:hover {
+  color: #c51937;
+}
+
+.models-list__link_active {
+  position: relative;
+  color: #e51937;
+}
+
+.models-list__link_active:before {
+  position: absolute;
+  top: 26px;
+  content: "";
+  width: 60px;
+  border-bottom: 2px solid #e51937;
+  border-radius: 50%;
+}
+
+.models-list__item_first {
+  grid-column: 2 / 3;
+  margin-left: 42px;
+}
+
+.models-list__item_second {
+  grid-column: 3 / 4;
+  margin-left: 63px;
+}
+
+.models-list__item_third {
+  grid-column: 4 / 5;
+  margin-left: 25px;
+}
+
+.models-list__item_fourth {
+  grid-column: 5 / 6;
+  margin-left: 45px;
+}
+
+.models-list__item_fifth {
+  grid-column: 6 / 7;
+  margin-left: 45px;
+}
+
 .main {
   padding-top: 53px;
 }
 
-.heading {
+.page-heading {
   padding: 0;
   margin: 0;
   font-size: 90px;
@@ -152,12 +170,9 @@ body {
 }
 
 .spec-list {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: auto 70px auto;
   grid-template-columns: auto auto;
-  -ms-grid-column-align: right;
-      justify-self: right;
+  justify-self: right;
   justify-items: right;
   grid-column-gap: 70px;
   list-style: none;
@@ -174,8 +189,7 @@ body {
 }
 
 .spec-list__item {
-  -ms-grid-column-align: left;
-      justify-self: left;
+  justify-self: left;
 }
 
 .spec-list__item_speed::before {
@@ -211,9 +225,7 @@ body {
 .test-drive {
   position: relative;
   padding-left: 30px;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  align-self: center;
   font-size: 13px;
   font-weight: 700;
   text-transform: uppercase;
@@ -245,15 +257,9 @@ body {
   margin-left: 40px;
   color: #c51937;
   background-color: #fff;
-  -webkit-transition-property: color, background-color;
-  -o-transition-property: color, background-color;
   transition-property: color, background-color;
-  -webkit-transition-duration: 0.8s, 0.8s;
-       -o-transition-duration: 0.8s, 0.8s;
-          transition-duration: 0.8s, 0.8s;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  transition-duration: 0.8s, 0.8s;
+  align-self: center;
 }
 
 .button_test-drive:focus,
@@ -265,9 +271,7 @@ body {
 
 .main-specs {
   position: relative;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 223fr 554fr 223fr;
   grid-template-columns: 223fr 554fr 223fr;
   padding-top: 15px;
   background-image: url("images/tesla-logo-grey.svg");
@@ -291,26 +295,20 @@ body {
 
 .image_main-specs {
   margin: 0 auto 28px auto;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
   grid-column: 1 / 4;
   width: 67%;
 }
 
 .main-specs__bottom {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns:  2fr 1fr 1fr;
   grid-template-columns:  2fr 1fr 1fr;
   justify-items: right;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
   grid-column: 2 / 3
 }
 
 
-@media (max-width: 820px) {
-  .navigation {
+@media (max-width: 1024px) {
+  .models-list {
     display: none;
   }
 
@@ -321,32 +319,23 @@ body {
   
 @media (max-width: 670px) {
 .main-specs {
-  -ms-grid-columns: auto;
   grid-template-columns: auto;
 }
 
 .image_main-specs {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
   grid-column: 1 / 2;
 }
 
 .main-specs__bottom {
-  -ms-grid-columns: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
   grid-row-gap: 14px;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
   grid-column: 1 / 2;
   justify-items: center;
 }
 
 .spec-list {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
   grid-column: 1 / 3;
-  -ms-grid-column-align: center;
-      justify-self: center;
+  justify-self: center;
 }
 
 .button_test-drive {
@@ -355,7 +344,7 @@ body {
 }
 
 @media (max-width: 500px) {
-  .navigation {
+  .page-navigation {
     padding: 21px 19px 0 0;
     grid-auto-flow: column;
   }
@@ -365,7 +354,7 @@ body {
     height: 42px;
   }
 
-  .navigation__link {
+  .page-navigation__link {
     display: none;
   }
 
@@ -383,22 +372,20 @@ body {
   }
 
   .main-specs {
-    -ms-grid-columns: auto;
     grid-template-columns: auto;
     background-size: 448px 139px;
     background-position: -43px -25px;
   }
 
   .image_main-specs {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
     grid-column: 1 / 2;
     margin-right: 12px;
     margin-bottom: 25px;
     width: 95%;
+    height: 90%;
   }
   
-  .heading {
+  .page-heading {
     font-size: 50px;
     margin-bottom: 6px;
   }
